2007-01-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-actions-copy-out-of-band):
	`tramp-copy-failed-regexp' calls `tramp-action-permission-denied'.
	(tramp-handle-file-local-copy): Set `enable-multibyte-characters'
	to nil.  Reported by Chris Moore <christopher.ian.moore@gmail.com>.
	(tramp-handle-write-region): Compute file size as difference
	between END and START.
	(tramp-touch): In case of 'tramp-sh-file-name-handler, apply
	`tramp-send-command', which is more efficient.  Check, whether
	`format-time-string' is a primitive.
	(tramp-action-permission-denied, tramp-action-process-alive):
	Don't apply `pop-to-buffer', this is done centrally.
	(tramp-action-copy-failed): Removed, not needed anymore.
	(tramp-get-remote-stat): Hide temporary error message.

2007-01-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-maybe-open-connection): The sent command must
	ensure that the process terminates, finally.  Write the command
	compatible for shells and w32 COMSPEC.

2007-01-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-fish.el (tramp-fish-handle-write-region): Implement APPEND.
	(tramp-fish-handle-rename-file)
	(tramp-fish-handle-copy-file): Error handling is not necessary here,
	will be done centrally.  Apply `tramp-fish-do-copy-or-rename-file'.
	(tramp-fish-do-copy-or-rename-file)
	(tramp-fish-do-copy-or-rename-file-directly): New defuns.

2006-12-31  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-mode): Use `natnump' instead of
	`wholenump' because of XEmacs.

2006-12-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler-alist): Add handler for
	`shell-command'.
	(tramp-handle-shell-command): New defun.
	(tramp-touch): Don't bind `shell-file-name' locally.

	* tramp-fish.el (tramp-fish-file-name-handler-alist): Add handler
	for `shell-command'.

	* tramp-util.el (tramp-advice-start-process-shell-command)
	(tramp-advice-call-process-shell-command): Bind